# distributed-query-benchmarking

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: ray-eks-8-workers.json
cluster_configs/: ray-eks-8-workers.json
cluster_setup/: dask-k8s.16-nodes.yaml  dask-k8s.4-nodes.yaml  ray-cluster.yaml
distributed_query_benchmarking/: __main__.py  common.py  daft.py  ray_job_runner.py
distributed_query_benchmarking/assets/: ray_cluster_config.yaml
distributed_query_benchmarking/daft_queries/: queries.py  tpch.py
distributed_query_benchmarking/dask_queries/: queries.py  tpch.py
distributed_query_benchmarking/modin_queries/: queries.py  tpch.py
distributed_query_benchmarking/spark_queries/: README.md  bootstrap-emr-pip-installs.sh  emr.sh  queries.py  spark_sql_main.py  tpch.py
kubernetes_configs/: dask-k8s.8-nodes.yaml  dask-k8s.yaml
results/: tpch-100-sf.csv  tpch-1000-sf.csv
scripts/: install_dask_requirements.sh  uppercase_column_names.py
spark_aws_ec2/: README.md  example-flintrock-config.yaml  sample-job.py  sample-tpch-job.py  spark_submit_harness.py  tpcds_main.py  tpch_main.py  tpch_spark_submit_harness.py
viz/: ProducePlots.ipynb  requirements.txt  tpch-1000sf.html  tpch-100sf.html  tpch-nodes-count-daft-1000-sf.html
