[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed_query_benchmarking"
authors = [
    {name = "Jay Chia", email = "jay@eventualcomputing.com"},
]
description = "Benchmarking distributed query engines"
readme = "README.md"
requires-python = "==3.10.9"
keywords = ["dataframe", "benchmarking"]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Daft",
    "Programming Language :: Python :: 3",
]
dependencies = ["ray[default]==2.3.0"]
dynamic = ["version"]

[project.scripts]
dqb = "distributed_query_benchmarking.__main__:main"
