[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"distributed_query_benchmarking" = "distributed_query_benchmarking"}

[project]
name = "distributed_query_benchmarking"
authors = [
    {name = "Jay Chia", email = "jay@eventualcomputing.com"},
]
description = "Benchmarking distributed query engines"
readme = "README.md"
keywords = ["dataframe", "benchmarking"]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Daft",
    "Programming Language :: Python :: 3",
]
dependencies = ["ray[default]==2.4.0", "pandas", "dask[distributed,dataframe]==2023.5.0", "ipython", "pyarrow==12.0.0", "s3fs"]
dynamic = ["version"]

[project.scripts]
dqb = "distributed_query_benchmarking.__main__:main"
