[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed_query_benchmarking"
authors = [
    {name = "Jay Chia", email = "jay@eventualcomputing.com"},
]
description = "Benchmarking distributed query engines"
readme = "README.md"
keywords = ["dataframe", "benchmarking"]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Daft",
    "Programming Language :: Python :: 3",
]
dependencies = ["ray[default]==2.7.1", "pandas", "dask[distributed,dataframe]==2023.5.0", "ipython", "pyarrow==12.0.0", "s3fs", "wheel_filename"]
dynamic = ["version"]

[project.scripts]
dqb = "distributed_query_benchmarking.__main__:main"

[tool.setuptools]
packages = ["distributed_query_benchmarking"]
